--- a/src/partials/main.html
+++ b/src/partials/main.html
@@ -65,6 +65,31 @@
 </article>
 
 </section>
+<section class="demo-section" id="demo">
+    <div class="container demo-container">
+
+        <h2 class="demo-title">GAME</h2>
+        <p class="demo-text">The game revolves around endless rows of interactive pumpkins. Each pumpkin can be activated individually, showing you
+        hidden stuff, cool effects, or special events that mix things up.</p>
+        <div class="demo-wrapper">
+           
+
+
+            <div class="iframe-wrapper" id="play">
+                <iframe id="gameIframe"></iframe>
+
+                <button id="closeIframeBtn" class="hidden-close-btn" aria-label="Close">
+                    <img src="/img/demo/close.png" alt="Close">
+                </button>
+            </div>
+        </div>
+        <a class="demo-btn" href="#play" data-game-url="https://demo.evoplay.games/demo/fullstate/html5/evoplay/moneyminter"
+            target="gameIframe">
+          <p class="demo-text-btn">Enter the Pumpkin World</p>
+        </a>
+    </div>
+</section>
+
 <section class="similar">
     <div class="similar-swiper swiper">
         <div class="swiper-wrapper">
