--- a/src/partials/main.html
+++ b/src/partials/main.html
@@ -85,7 +85,7 @@
         </div>
         <a class="demo-btn" href="#play" data-game-url="https://demo.evoplay.games/demo/fullstate/html5/evoplay/moneyminter"
             target="gameIframe">
-          <p class="demo-text-btn">Enter the Pumpkin World</p>
+          <p class="demo-text-btn">Try Free Demo</p>
         </a>
     </div>
 </section>
@@ -119,12 +119,19 @@
         </ul>
     </div>
 </section>
-<section class="similar">
+<section class="similar-section">
+    <div class="container similar-container">
+        <h2 class="similar-title">SIMILAR GAMES</h2>
+        <p class="similar-text">You May Also Like</p>
     <div class="similar-swiper swiper">
         <div class="swiper-wrapper">
-            <div class="swiper-slide">Similar 1</div>
-            <div class="swiper-slide">Similar 2</div>
-            <div class="swiper-slide">Similar 3</div>
+            <div class="swiper-slide similar-swiper-slide">
+                <img class="similar-img" src="/img/similar/one.png" alt="">
+            </div>
+            <div class="swiper-slide similar-swiper-slide">
+                <img class="similar-img" src="/img/similar/two.png" alt="">
+            </div>
         </div>
     </div>
+</div>
 </section>
