--- a/src/partials/main.html
+++ b/src/partials/main.html
@@ -1,5 +1,5 @@
 <section class="home-section">
-    <article class="hero-section">
+    <article class="hero-section" id="home">
 <div class="container hero-container">
     <h1 class="visually-hidden">Pumpkin Master</h1>
     <img class="hero-pump" src="/img/hero/pump.png" alt="Pumpkin" loading="lazy" width="413" height="309">
@@ -33,7 +33,7 @@
        </div> 
     </div>
 </article>
-<article class="visual-section">
+<article class="visual-section" id="visual">
     <div class="container visual-container">
         <h2 class="visual-title">VISUAL WORLD</h2>
         <p class="visual-text-one">A Rich Halloween Atmosphere</p>
@@ -89,7 +89,7 @@
         </a>
     </div>
 </section>
-<section class="how-section">
+<section class="how-section" id="how">
     <div class="container">
         <h2 class="how-title">HOW IT WORKS</h2>
         <ul class="how-list">
@@ -119,7 +119,7 @@
         </ul>
     </div>
 </section>
-<section class="similar-section">
+<section class="similar-section" id="similar">
     <div class="container similar-container">
         <h2 class="similar-title">SIMILAR GAMES</h2>
         <p class="similar-text">You May Also Like</p>
