--- a/src/css/header.css
+++ b/src/css/header.css
@@ -1,44 +1,121 @@
 .header {
-  padding: 20px 0;
+  position: fixed;
+  top: 0px;
+  left: 50%;
+  transform: translateX(-50%);
+  z-index: 999;
+  backdrop-filter: blur(22px);
+background: #000;
+height: 48px;
+  width: 100%;
+
 }
-.nav {
+
+.header-container {
+  padding:0 16px;
   display: flex;
   justify-content: space-between;
 }
-.nav-logo {
-  display: inline-flex;
-  align-items: center;
-  justify-content: center;
-}
-.nav-list {
+
+
+.menu-button {
   display: flex;
   align-items: center;
-  justify-content: flex-end;
-  gap: 40px;
+  justify-content: center;
+  border: none;
+  background: inherit;
+  margin-right: 10px;
+  margin-left: auto;
 }
-.nav-link {
-  position: relative;
-  display: block;
-  font-weight: 500;
-  letter-spacing: 0.02em;
-  transition: 200ms ease-in;
+
+.navigation-list {
+  display: none;
 }
-.nav-link:hover,
-.nav-link:focus {
-  color: #747bff;
-}
-.nav-link::after {
-  content: '';
-  position: absolute;
-  bottom: 0;
+
+/* Modal */
+.modal {
+  display: none;
+background: #000;
+  padding: 130px 45px;
+  width: 374px;
+  height: 710px;
+  z-index: 1000;
+  position: fixed;
+  top: 60px;
   left: 50%;
-  transform: translateX(-50%) translateY(100%);
-  width: 110%;
-  height: 4px;
-  border-radius: 4px;
-  transform-origin: center;
-  animation: stretch 400ms cubic-bezier(0.68, -0.55, 0.27, 1.55) 200ms both;
+  transform: translateX(-50%);
+  transition: visibility 0.3s ease;
 }
-.nav-link.active::after {
-  background: #747bff;
+
+.menu-list {
+  display: flex;
+  flex-direction: column;
+  gap: 16px;
+  align-items: center;
+}
+
+
+.menu-item {
+  box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.25);
+    background: #790bff;
+    border-radius: 50px;
+      width: 285px;
+      height: 40px;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+
+}
+
+
+@media screen and (min-width: 1440px) {
+  .header {
+    width: 100%; 
+    height: 64px;
+    background: #fff;
+  }
+
+  .header-container {
+    padding: 12px 100px;
+    justify-content: center;
+    align-items: center;
+  }
+
+
+  .menu-button {
+    display: none;
+  }
+
+  .navigation-list {
+    display: flex;
+    align-items: center;
+    gap: 16px;
+  }
+
+
+
+
+  .navigation-item {
+    border-radius: 50px;
+      width: 160px;
+      height: 40px;
+font-family: "Fjalla One", sans-serif;
+  font-weight: 400;
+  font-size: 16px;
+  text-align: center;
+  color: #790bff;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+    transition: all 0.2s ease;
+  }
+
+
+
+  .navigation-item:hover,
+  .navigation-item:focus,
+  .navigation-item.active {
+background: #ffea00;
+  }
+
 }
