--- a/src/css/footer.css
+++ b/src/css/footer.css
@@ -1,21 +1,25 @@
-.footer {
-  padding: 20px 0;
+.footer-navigation{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 24px;
+  font-family: "Fjalla One", sans-serif;
+    font-weight: 400;
+    font-size: 36px;
+    text-align: center;
+    color: #ffea00;
 }
-.footer-desc {
-  text-align: center;
+.footer-text{
+  font-size: 14px;
+  margin-top: 32px;
 }
-.footer-link {
-  position: relative;
-}
-.footer-link::before {
-  content: '';
-  position: absolute;
-  bottom: 6%;
-  left: 50%;
-  transform: translateX(-50%) skewX(-12deg);
-  z-index: -1;
-  width: 110%;
-  height: 24%;
-  background-color: #41d1ff;
-  transition: 200ms ease;
+@media only screen and (min-width: 1440px) {
+  .footer-navigation{
+    flex-direction: row;
+    justify-content: space-between;
+  }
+  .footer-container{
+    padding-left: 129px;
+    padding-right: 129px;
+  }
 }
